<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">tiantian</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, DeskClockMainActivity!</string>
    <string name="nav_desc">nav_desc</string>
    <string name="launch_intro">这是第一个Fragment界面</string>
    <string name="launch_click_me">我是一个按钮</string>
    <string name="common_intro">这是CommonUIFragment界面</string>
    <string name="label">"备忘事件"</string>
    <string name="alarm_list_title">"备忘录"</string>
    <string name="add_alarm">"添加备忘录"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"备忘录"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm">"修改备忘录设置"</string>
    <string name="enable_alarm">"启用备忘录"</string>
    <string name="delete_alarm">"取消备忘录"</string>
    <string name="disable_alarm">"停用备忘录"</string>
    <string name="delete_alarm_confirm">"将会取消此备忘录。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置备忘录"</string>
    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除事件"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"铃声音量"</string>
    <string name="alarm_volume_summary">"设置铃声音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此提醒。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"备忘录提醒时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将备忘录设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>

     <string name="call_out">呼  叫</string>
    <string name="tv_callrecords">通话记录</string>
    <string name="tv_calldetail">详 情</string>
    <string name="tv_share">发送</string>
    <string name="search">请输入关键字</string>
    <string name="tv_add_edit">编辑</string>
    <string name="chancel">取消</string>
    <string name="tv_title">添加联系人</string>
    <string name="choose">确定</string>
    <string name="tv_add">新增</string>
    <string name="et_name">姓名</string>
    <string name="et_company">公司</string>
    <string name="et_post">职位</string>
    <string name="et_mobilphone">手机</string>
    <string name="et_tellphone">电话</string>
    <string name="et_email">邮件</string>
    <string name="et_qq">QQ</string>
    <string name="et_address">地址</string>
    <string name="et_remark">备注</string>
    <string name="et_delete">删除</string>
    
    
    
    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此备忘录设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此备忘录设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g><xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此备忘录设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g><xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此备忘录设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g><xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该备忘录设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g><xliff:g id="HOURS">%2$s</xliff:g><xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>

    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>

    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>

    <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的备忘录铃声播放服务。"</string>

</resources>