<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <LinearLayout 
       android:layout_height="40dip"
       android:layout_width="match_parent"
       android:background="#297DC6">
       <TextView 
           android:id="@+id/tv_back"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/chancel"
           android:textColor="@color/white"
           android:textSize="20sp"
           android:layout_gravity="center_vertical"
           android:layout_marginLeft="15dp"/>
       <TextView 
           android:layout_marginLeft="60dip"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/tv_title"
           android:textSize="18sp"
           android:layout_gravity="center_vertical"/>
       <TextView 
           android:id="@+id/tv_choose"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/choose"
           android:textColor="@color/white"
           android:textSize="20sp"
           android:layout_gravity="center_vertical"
           android:layout_marginLeft="50dp"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_pic" 
            android:layout_height="70dp"
            android:layout_width="70dp"
            android:src="@drawable/user_add"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rect_gray">
            <LinearLayout 
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/et_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="40dp"
                android:layout_width="170dp"
                android:hint="@string/et_name"
                android:background="@android:color/transparent"/>
            <ImageView
                android:id="@+id/name_del" 
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
            </LinearLayout>
            <View 
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/blue"/>
            <LinearLayout 
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/et_company"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="40dp"
                android:layout_width="170dp"
                android:hint="@string/et_company"
                android:background="@android:color/transparent"/>
             <ImageView 
                 android:id="@+id/company_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
            </LinearLayout>
            <View 
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/blue"/>
            <LinearLayout 
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/et_post"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_height="40dp"
                android:layout_width="170dp"
                android:hint="@string/et_post"
                android:background="@android:color/transparent"/>
            <ImageView 
                android:id="@+id/post_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rect_gray">
        <LinearLayout 
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <Button 
                android:layout_height="match_parent"
                android:layout_width="70dp"
                android:text="@string/et_mobilphone"
                android:background="@drawable/rect_gray_left_top"/>
            <EditText
                android:layout_marginLeft="5dp" 
                android:id="@+id/et_mobialphone"
                android:layout_height="40dp"
                android:layout_width="190dp"
                android:background="@android:color/transparent"
                android:inputType="phone"/>
            <ImageView 
                android:id="@+id/mobialphone_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
        </LinearLayout>
        <View 
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/blue"/>
         <LinearLayout 
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <Button 
                android:layout_height="match_parent"
                android:layout_width="70dp"
                android:text="@string/et_tellphone"
                android:background="@drawable/rect_gray_rectangle"/>
            <EditText
                android:layout_marginLeft="5dp"  
                android:id="@+id/et_tellphone"
                android:layout_height="40dp"
                android:layout_width="190dp"
                android:background="@android:color/transparent"
                android:inputType="phone"/>
            <ImageView 
                android:id="@+id/tellphone_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
        </LinearLayout>
        <View 
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/blue"/>
         <LinearLayout 
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <Button 
                android:layout_height="match_parent"
                android:layout_width="70dp"
                android:text="@string/et_email"
                android:background="@drawable/rect_gray_rectangle"/>
            <EditText 
                android:layout_marginLeft="5dp" 
                android:id="@+id/et_email"
                android:layout_height="40dp"
                android:layout_width="190dp"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"/>
            <ImageView 
                android:id="@+id/email_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
        </LinearLayout>
        
         <View 
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/blue"/>
         <LinearLayout 
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <Button 
                android:layout_height="match_parent"
                android:layout_width="70dp"
                android:text="@string/et_qq"
                android:background="@drawable/rect_gray_rectangle"/>
            <EditText
                android:layout_marginLeft="5dp"  
                android:id="@+id/et_qq"
                android:layout_height="40dp"
                android:layout_width="190dp"
                android:background="@android:color/transparent"/>
            <ImageView 
                android:id="@+id/qq_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
        </LinearLayout>
        
         <View 
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/blue"/>
         <LinearLayout 
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <Button 
                android:layout_height="match_parent"
                android:layout_width="70dp"
                android:text="@string/et_address"
                android:background="@drawable/rect_gray_left_bottom"/>
            <EditText
                android:layout_marginLeft="5dp"  
                android:id="@+id/et_address"
                android:layout_height="40dp"
                android:layout_width="190dp"
                android:background="@android:color/transparent"/>
            <ImageView 
                android:id="@+id/address_del"
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_del"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rect_gray">
        <EditText
            android:layout_marginLeft="5dp"  
            android:id="@+id/et_remark"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:hint="@string/et_remark"
            android:gravity="top|left"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/bt_delete" 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/et_delete"
        android:background="#FF2121"
        android:textColor="#ffffff"/>

</LinearLayout>
