<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/ll_title" 
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/detail_back"/>
        <TextView
            android:id="@+id/tv_name" 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="陈天龙"/>
    </LinearLayout>
    <ImageView
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/round"/>
    <TextView
        android:id="@+id/tv_name_last"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:layout_marginTop="26dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:text="龙"/>
    
        <LinearLayout
            android:id="@+id/ll_middle"
            android:background="@drawable/rect_gray"
            android:layout_height="30dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dip"
            android:layout_below="@id/ll_title">
                <LinearLayout
                    android:id="@+id/ll_callrecords"
                    style="@style/main_layout"
                    android:background="@drawable/rect_gray_left">
                  <TextView
                    android:layout_marginLeft="50dp"
                    android:id="@+id/tv_callrecords"
                    style="@style/main_tab"
                    android:text="@string/tv_callrecords"/>
                </LinearLayout>
               <LinearLayout
                   android:id="@+id/ll_calldetail"
                    style="@style/main_layout"
                    android:background="@drawable/rect_gray_right">
                 <TextView
                     android:id="@+id/tv_calldetail" 
                    android:layout_marginLeft="50dp"
                    style="@style/main_tab"
                    android:text="@string/tv_calldetail"/>
              </LinearLayout>
        </LinearLayout>
        
        <android.support.v4.view.ViewPager
           android:layout_below="@id/ll_middle"
           android:id="@+id/viewPager"
           android:layout_height="match_parent"
           android:layout_width="match_parent">
        </android.support.v4.view.ViewPager>
        
        <LinearLayout 
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="#CECECE">
           <LinearLayout 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_marginLeft="90dp">
            <ImageView
                android:id="@+id/iv_share"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:src="@drawable/share"/>
            <TextView
                android:layout_marginLeft="10dp" 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tv_share"/>
            </LinearLayout>
            
           <LinearLayout 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_marginLeft="50dp">
            <ImageView
                android:id="@+id/iv_add_edit"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:src="@drawable/edit"/>
            <TextView
                android:id="@+id/tv_add_edit"
                android:layout_marginLeft="10dp" 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tv_add_edit"/>
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>
